# dragonroost

./: .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  Taskfile.yml  cookiecutter-config-file.yml  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  initial-data.yaml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
.gitea/workflows/: deploy-with-images.yml  deploy.yml  new-deploy.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
compose/local/django/: Dockerfile
compose/production/aws/: Dockerfile
compose/production/django/: Dockerfile  start
compose/production/traefik/: traefik.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
db_data/base/1/: pg_internal.init
db_data/base/5/: pg_internal.init
db_data/global/: 1260  1262  2671  pg_control  pg_internal.init
db_data/pg_stat/: pgstat.stat
docker/: Dockerfile-django  README.md  docker-compose.yml
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
dragonroost/: __init__.py  conftest.py  gunicorn.conf.py  manage.py  requirements.txt
dragonroost/animals/: admin.py  apps.py  filters.py  forms.py  managers.py  models.py  tables.py  urls.py  views.py
dragonroost/animals/migrations/: 0001_initial.py  0002_medicalrecord_findings_medicalrecord_problem_list.py  0002_species_has_breeds_breed.py  0003_alter_medicalrecord_options_alter_animal_status.py  0003_animal_breed_alter_species_class_name.py  0004_alter_animal_animal_photo_and_more.py  0004_alter_animal_breed.py  0005_alter_animal_breed.py  0006_alter_animal_options.py
dragonroost/animals/templatetags/: animal_status_tags.py
dragonroost/animals/tests/: factories.py  test_models.py
dragonroost/apps/accounts/: services.py  urls.py  views.py
dragonroost/apps/animals/: admin.py  apps.py  models.py  urls.py  views.py
dragonroost/apps/business/: apps.py  models.py  urls.py  views.py
dragonroost/apps/medical/: apps.py  models.py  urls.py
dragonroost/apps/people/: apps.py  models.py  urls.py  views.py
dragonroost/business/: admin.py  apps.py  forms.py  models.py  tables.py  urls.py  views.py
dragonroost/db-data/: postmaster.pid
dragonroost/dragonroost/: asgi.py  base.py  dev.py  middlewares.py  mixins.py  prod.py  urls.py  views.py  wsgi.py
dragonroost/medical/: apps.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
dragonroost/people/: admin.py  apps.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
dragonroost/templates/: 400.html  403.html  404.html  405.html  500.html  base.html  index.html  navbar.html  sidebar.html
dragonroost/users/: adapters.py  apps.py  models.py  views.py
dragonroost_ng/: conftest.py  mixins.py
dragonroost_ng/animals/: apps.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
dragonroost_ng/business/: apps.py  models.py  tables.py  urls.py  views.py
dragonroost_ng/medical/: apps.py  models.py
dragonroost_ng/people/: apps.py  filters.py  models.py  tables.py  urls.py  views.py
dragonroost_ng/templates/: base.html
dragonroost_ng/users/: adapters.py  apps.py  views.py
k8s/: configs.yaml  deployment.example.yaml  deployment.yaml  postgres-service.yaml  secrets.yaml  services.yaml  statefulset-psql.yaml
media/images/: dragonroost-homepage.bck
prod_db_data/: postmaster.pid
prod_db_data/global/: 1260  pg_control  pg_internal.init
requirements/: base.txt  local.txt  production.txt
src/: gunicorn.conf.py  manage.py  requirements.txt
src/dragonroost/: asgi.py  base.py  dev.py  middlewares.py  production.py  urls.py  views.py  wsgi.py
src/templates/: 400.html  403.html  404.html  405.html  500.html  base.html  bootstrap.html  index.html  navbar.html  test-base.html
tests/: conftest.py  factories.py
tests/test_example/: test_hello.py
(+525 files in other folders)
