# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dragonroost"
version = "0.1.0"
description = "Dragonroost is an animal shelter/rescue management app, written in Python using the Django web framework."
readme = "README.md"
authors = ["Dan King <ddrevkpop@gmail.com>"]
license = "MIT"
repository = "https://github.com/leethobbit/dragonroost"
homepage = "https://github.com/leethobbit/dragonroost"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
pillow = "^10.2.0"
django-extensions = "^3.2.3"
django-redis = "^5.4.0"
django-storages = "^1.14.2"
psycopg = {version = "3.1.12", extras = ["binary"]}
isort = {extras = ["colors"], version = "^5.13.2"}
waitress = "^3.0.0"
pyyaml = "^6.0.1"
htmx = "^0.0.0"
django-tables2 = "^2.7.0"
django-filter = "^24.1"
django-htmx = "^1.17.3"
django-bootstrap5 = "^23.4"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
crispy-bootstrap4 = "^2024.1"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"
pytest-django = "^4.8.0"
factory-boy = "^3.3.0"
bandit = "^1.7.8"
black = "^24.2.0"
darglint = "^1.8.1"
isort = "^5.13.2"
mypy = "^1.9.0"
mypy-extensions = "^1.0.0"
pre-commit = "^3.6.2"
pydocstyle = "^6.3.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
pyupgrade = "^3.15.1"
safety = "^3.0.1"
coverage = "^7.4.3"
coverage-badge = "^1.1.0"
pytest-html = "^4.1.1"
pytest-cov = "^4.1.0"

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 39
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.9
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
DJANGO_SETTINGS_MODULE = "dragonroost.dev"
django_find_project = false
pythonpath = [".", "src",]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "dragonroost"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true